[package]
name = "rtag_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
mongodb = "2.6.1"
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.179", features = ["derive"] }
toml = "0.7.6"
